/*
 *  UCF COP3330 Summer 2021 Application Assignment 1 Solution
 *  Copyright 2021 first_name last_name
 */

public class Application {
    public static void main(String[] args) {



    }
}