package baseline;

public class Item {

    // StringArray (Description)

    // FormattedString (DueDate)

    // Boolean (Complete) = False


    // public StringArray editDescription (Item.StringArray X)
    // {
    //   sout ("Enter Description")
    //   item.Description
    //   return Description
    // }


    // public FormattedString (Item.DueDate X)
    // {
    //   sout ("Edit Due Date")
    //   item.DueDate
    //   return Description
    // }


    // public CompleteCheck()
    // {
    //   sout ("Edit Due Date")
    //   item.DueDate
    //   return Description
    // }

}
