package baseline;

public class ToDo{
    //String Title
    // LinkedList Item

    // Function void addItem(){
    //
    //    Item ItemObject1 = new Item         *Create The new Item Object*
    //
    //    ItemObject1.editDescription         *Set the New Item Object
    //    ItemObject1.editDueDate
    //
    //    //Add to LinkedList
    //}

    // Function void RemoveItem(ItemObjectX){
    //
    //    // Remove From LinkedList                    *Remove Item from Linked List*
    //}

    // Function String editTitle(){
    //
    //    sout ("Please enter a title")
    //    String title = scanner
    //    ToDo.Title = title

}
