package baseline;

public class ToDoList {
    //
    // LinkedList ToDoList
    //
    //
    // Function AddToDo(){
    //
    //      ToDo ToDoObject1 = new Todo   *Creates todo Lists*
    //
    //      ToDo.editTitle
    //
    //      add ToDo to LinkedList
    //}

    // Function RemoveToDo(ToDoX){
    //
    //      remove ToDo from the LinkedList
    //
    //}
}
